agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__edit_file_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "EditFileRequest",
  "description": "Apply search/replace edits through OCC.",
  "type": "object",
  "required": [
    "caller_id",
    "edits",
    "path"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "edits": {
      "description": "Ordered list of edits to apply.",
      "type": "array",
      "items": {
        "$ref": "#/definitions/SearchReplaceEdit"
      }
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "path": {
      "description": "Workspace-relative file path to edit.",
      "type": "string"
    }
  },
  "definitions": {
    "SearchReplaceEdit": {
      "description": "One exact-match replacement applied as part of an [`EditFileRequest`].",
      "type": "object",
      "required": [
        "new_text",
        "old_text"
      ],
      "properties": {
        "new_text": {
          "description": "Replacement text.",
          "type": "string"
        },
        "old_text": {
          "description": "Text to find.",
          "type": "string"
        },
        "replace_all": {
          "description": "Whether to replace all occurrences (defaults to `false`).",
          "default": false,
          "type": "boolean"
        }
      }
    }
  }
}
