agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__enter_isolated_workspace_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "EnterIsolatedWorkspaceRequest",
  "description": "Enter an isolated workspace.",
  "type": "object",
  "required": [
    "caller_id",
    "layer_stack_root"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "layer_stack_root": {
      "description": "`LayerStack` root to base the isolated workspace on.",
      "type": "string"
    }
  }
}
