agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__exec_command_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "ExecCommandRequest",
  "description": "Run or start a managed command session.",
  "type": "object",
  "required": [
    "caller_id",
    "cmd"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "cmd": {
      "description": "Command line to run.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "max_output_tokens": {
      "description": "Cap on output tokens returned.",
      "type": [
        "integer",
        "null"
      ],
      "format": "uint32",
      "minimum": 0.0
    },
    "timeout": {
      "description": "Command timeout in seconds.",
      "type": [
        "integer",
        "null"
      ],
      "format": "uint32",
      "minimum": 0.0
    },
    "yield_time_ms": {
      "description": "Yield window in milliseconds before returning partial output.",
      "type": [
        "integer",
        "null"
      ],
      "format": "uint32",
      "minimum": 0.0
    }
  }
}
