agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__exec_stdin_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "ExecStdinRequest",
  "description": "Write characters to an open command session through `api.v1.write_stdin`.",
  "type": "object",
  "required": [
    "caller_id",
    "chars",
    "command_session_id"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "chars": {
      "description": "Characters (stdin) to write.",
      "type": "string"
    },
    "command_session_id": {
      "description": "Target command-session id.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "yield_time_ms": {
      "description": "Yield window in milliseconds before returning partial output.",
      "type": [
        "integer",
        "null"
      ],
      "format": "uint32",
      "minimum": 0.0
    }
  }
}
