agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__exit_isolated_workspace_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "ExitIsolatedWorkspaceRequest",
  "description": "Exit an isolated workspace.",
  "type": "object",
  "required": [
    "caller_id"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "grace_s": {
      "description": "Grace period in seconds before forcing teardown (defaults to `5.0`).",
      "default": 5.0,
      "type": "number",
      "format": "double"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    }
  }
}
