agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__read_command_progress_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "ReadCommandProgressRequest",
  "description": "Read a stateless tail snapshot from an open command session.",
  "type": "object",
  "required": [
    "caller_id",
    "command_session_id",
    "last_n_lines"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "command_session_id": {
      "description": "Target command-session id.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "last_n_lines": {
      "description": "Number of trailing lines to return.",
      "type": "integer",
      "format": "uint32",
      "minimum": 0.0
    }
  }
}
