agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__read_file_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "ReadFileRequest",
  "description": "Read one UTF-8 text file.",
  "type": "object",
  "required": [
    "caller_id",
    "path"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "path": {
      "description": "Workspace-relative file path to read.",
      "type": "string"
    }
  }
}
