agent-core/crates/eos-sandbox-port/tests/snapshots/schema_snapshot__write_file_request.snap
---
source: crates/eos-sandbox-port/tests/schema_snapshot.rs
expression: schema
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "WriteFileRequest",
  "description": "Write one UTF-8 file through OCC.",
  "type": "object",
  "required": [
    "caller_id",
    "content",
    "path"
  ],
  "properties": {
    "caller_id": {
      "description": "Opaque sandbox caller identity for audit and routing.",
      "type": "string"
    },
    "content": {
      "description": "New file contents.",
      "type": "string"
    },
    "description": {
      "description": "Human-readable operation description; falls back via [`Self::description_or`].",
      "default": "",
      "type": "string"
    },
    "invocation_id": {
      "description": "Optional in-flight correlation id, reused by the transport when present.",
      "type": [
        "string",
        "null"
      ]
    },
    "overwrite": {
      "description": "Whether to overwrite an existing file (defaults to `true`).",
      "default": true,
      "type": "boolean"
    },
    "path": {
      "description": "Workspace-relative file path to write.",
      "type": "string"
    }
  }
}
